<resources>
    <string name="app_name">MusicApp</string>
    <string name="now">Now is playing</string>
    <string name="liked">Liked songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="today">Discover today</string>
    <string name="fromPlaylist">Playing from playlist "Liked"</string>
    <string name="gotoS">Go to Song</string>
    <string name="gotoArtist">Go to Artist</string>
    <string name="code_red">Code Red</string>
    <string name="james_dh_iamjakehill">James DH, iamjakehill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>