<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff6f60"
    android:orientation="vertical"
    tools:context="com.example.musicapp.MainActivity">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="271dp"
        android:layout_height="318dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heavy" />

    <TextView
        android:id="@+id/fromPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="4dp"
        android:text="@string/fromPlaylist"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/code_red"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/james_dh_iamjakehill"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song" />

    <ImageView
        android:id="@+id/playButton"
        android:layout_width="76dp"
        android:layout_height="81dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="104dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        app:srcCompat="@drawable/noun_play_1940008" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <ImageView
        android:id="@+id/shuffle"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toStartOf="@+id/previous"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist"
        app:srcCompat="@drawable/noun_shuffle_4027756" />

    <ImageView
        android:id="@+id/previous"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageView
        android:id="@+id/repeat"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        app:srcCompat="@drawable/noun_repeat_1555394" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        app:srcCompat="@drawable/noun_like_1155152" />

</androidx.constraintlayout.widget.ConstraintLayout>
